# rosella

./: .gitignore  .gitmodules  .travis.yml  CITATION.cff  Cargo.toml  INSTALL.md  LICENSE  README.md  build_manuals.sh  concepts.html  doctave.yaml  faqs.html  index.html  install.sh  installation.html  performance.html  pixi.toml  prelude  roff_to_md.sh  rosella.py  rosella.yml  search_index.json
.github/workflows/: deploy-docs.yaml  release-rosella.yml
docs/: README.md  concepts.md  faqs.md  installation.md  performance.md  usage.md
docs/usage/: basic-usage.md
rosella/: binning.py  cluster.py  metrics.py  rosella.py
src/: cli.rs  external_command_checker.rs  lib.rs  utils.rs
src/clustering/: cluster_utils.rs  clusterer.rs  mod.rs
src/coverage/: coverage_calculator.rs  coverage_table.rs  mod.rs
src/embedding/: embedder.rs  filter.rs  mod.rs
src/estimation/: alignment_properties.rs  contig.rs  contig_variants.rs  mod.rs  variant_matrix.rs
src/estimation/bams/: contig_coverage.rs  index_bams.rs  mod.rs  process_bam.rs
src/estimation/vcfs/: process_vcf.rs
src/graphs/: mod.rs  nearest_neighbour_graph.rs
src/kmers/: kmer_counting.rs  mod.rs
src/model/: variants.rs
src/recover/: mod.rs  recover_engine.rs
src/refine/: mod.rs  refinery.rs
src/sketch/: contig_sketcher.rs  mod.rs  sketch_distances.rs
tests/data/ben/: random10000.fna  random10000.fna.fai
usage/: index.html  rosella-recover.html  rosella-refine.html
