[package]
name = "rosella"
version = "0.5.0"
authors = ["Rhys Newell <rhys.newell94@gmail.com"]
license = "GPL-3.0"
description = "Metagenome assembled genome recovery from metagenomes using UMAP and HDBSCAN"
homepage = "https://rhysnewell.github.io/rosella/"
repository = "https://github.com/rhysnewell/rosella"
documentation = "https://github.com/rhysnewell/rosella"
readme = "README.md"
exclude = [
  "tests/*"
]
default-run = "rosella"
edition = "2021"

[dependencies]
anyhow = "^1.0"
# annembed = { version = "^0.0.11", features = ["intel-mkl-static"] }
annembed = { git = "https://github.com/rhysnewell/annembed", features = ["intel-mkl-static"] }
bird_tool_utils = "^0.4"
bird_tool_utils-man = "^0.4"
clap = { version="^4", features = ["cargo"] } # cargo feature required for crate_version!
clap_complete = "^4"
csv = "1"
env_logger = "0.6"
finch = "^0.6"
hnsw_rs = "^0.1"
itertools = "0.8"
lazy_static = "1.3.0"
linfa = "^0.6"
linfa-nn = "^0.6"
linfa-preprocessing = "^0.6"
log = "0.4"
petgraph = "0.6.3"
petal-clustering = "^0.5"
rand = "0.6"
rayon = "^1.5.1"
roff = "^0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
statrs = "^0.16"
tempfile = "3.0"
indicatif = {version = "^0.16"}
scoped_threadpool = "^0.1.9"
ndarray-npy = "^0.8"
ndarray = {version = "^0.15", features = ["rayon"]}
needletail = "^0.5"
num-traits = "0.2.15"

[lib]
bench = false

#[[bench]]
#name = "benchmarks"
#harness = false

[dev-dependencies]
assert_cli = "0.6.*"
# Run things before commit but not push
#cargo-husky = { version="1", default-features = false, features=["precommit-hook", "run-cargo-test", "run-cargo-fmt"] }


# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
debug = true       # (u32 or bool) Include debug information (debug symbols).
                   # Equivalent to `-C debuginfo=2` compiler flag.
rpath = false      # controls whether compiler should set loader paths.
                   # If true, passes `-C rpath` flag to the compiler.
lto = true        # Link Time Optimization usually reduces size of binaries
                   # and _2 libraries. Increases compilation time.
                   # If true, passes `-C lto` flag to the compiler, and if a
                   # string is specified like 'thin' then `-C lto=thin` will
                   # be passed.
debug-assertions = true # controls whether debug assertions are enabled
                   # (e.g., debug_assert!() and arithmetic overflow checks)
codegen-units = 16 # if > 1 enables parallel code generation which improves
                   # compile times, but prevents some optimizations.
                   # Passes `-C codegen-units`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
incremental = true # whether or not incremental compilation is enabled
                   # This can be overridden globally with the CARGO_INCREMENTAL
                   # environment variable or `build.incremental` config
                   # variable. Incremental is only used for path sources.
overflow-checks = true # use overflow checks for integer arithmetic.
                   # Passes the `-C overflow-checks=...` flag to the compiler.

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3
debug = false
rpath = false
strip = true
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# The testing profile, used for `cargo test` (for `cargo test --release` see
# the `release` and `bench` profiles).
[profile.test]
opt-level = 3
debug = 2
rpath = false
lto = true
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

# The benchmarking profile, used for `cargo bench` (and the test targets and
# unit tests for `cargo test --release`).
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
